fix clone issue